--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,5 +3,8 @@
   "rules": {
     "comment-empty-line-before": null,
     "no-descending-specificity": null,
-  }
+    "selector-pseudo-class-no-unknown": [ true, {
+      "ignorePseudoClasses": ["where"]
+    } ]
+    }
 }
